<?xml version="1.0"?>
<package>
  <name>waypoint_box</name>
  <version>0.1.0</version>
  <description>Waypoint Publisher for moving box</description>
  <maintainer email="finani@kaist.ac.kr">Inhwan Wee</maintainer>
  <license>.</license>
  <author>Inhwan Wee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>

